--- a/src/main/resources/fxml/registerPage.fxml
+++ b/src/main/resources/fxml/registerPage.fxml
@@ -9,9 +9,9 @@
       <Label layoutX="193.0" layoutY="136.0" text="Username" />
       <Label layoutX="198.0" layoutY="175.0" text="Password" />
       <Label layoutX="147.0" layoutY="208.0" text="Repeat password" />
-      <Button layoutX="248.0" layoutY="255.0" mnemonicParsing="false" text="Register" />
-      <TextField layoutX="272.0" layoutY="131.0" />
-      <PasswordField layoutX="272.0" layoutY="170.0" />
-      <PasswordField layoutX="272.0" layoutY="203.0" />
+      <Button fx:id="registerButton" onAction="#register" layoutX="248.0" layoutY="255.0" mnemonicParsing="false" text="Register" />
+      <TextField fx:id="usernameTextField" layoutX="272.0" layoutY="131.0" />
+      <PasswordField fx:id="passwordTextField" layoutX="272.0" layoutY="170.0" />
+      <PasswordField fx:id="passwordConfirmationTextField" layoutX="272.0" layoutY="203.0" />
    </children>
 </AnchorPane>
